--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -1,6 +1,7 @@
 <h1><%=t '.title' %> ( <%= @account.accountname %> )</h1>
 
 <%= form_for [@team, @group, @account, @item], :html => { :multipart => true } do |f| %>
+  <%= f.error_messages %>
 
 	<div class="form-group">
 	  <%= f.label t('.upload') %>
