--- a/app/views/admin/recryptrequests/index.html.haml
+++ b/app/views/admin/recryptrequests/index.html.haml
@@ -16,4 +16,4 @@
         %td= t :yes
       - else
         %td= t :no
-      %td= link_to "recrypt", [:admin, recryptrequest], :method => :delete
+      %td= link_to "recrypt", [:admin, recryptrequest], method: :delete
