--- a/app/views/admin/users/index.html.haml
+++ b/app/views/admin/users/index.html.haml
@@ -6,9 +6,9 @@
     %th= t '.name'
     %th= t '.ldap_uid'
     %th= t '.admin'
-    %th{:colspan => "3"}= t :actions
+    %th{colspan: "3"}= t :actions
   - @users.unlocked.each do |user|
-    %tr{:class => "#{cycle( 'odd', 'even' )}"}
+    %tr{class: "#{cycle( 'odd', 'even' )}"}
       %td= user.username
       %td= user.label
       %td= user.uid.to_s
@@ -25,11 +25,11 @@
   %h1= t '.locked'
   %table.table.table-striped
     %tr
-      %th{:style => "width: 150px;"}= t '.username'
+      %th{style: "width: 150px;"}= t '.username'
       %th= t '.name'
       %th= t '.action'
     - @users.unlocked.each do |user|
-      %tr{:class => "#{cycle( 'odd', 'even' )}"}
+      %tr{class: "#{cycle( 'odd', 'even' )}"}
         %td= link_to user.username, edit_admin_user_path(user)
         %td= user.label
         %td.action_icon
