--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -1,7 +1,7 @@
 .footer
   .container
     .pull-left
-      %a{:href => "https://github.com/puzzle/cryptopus", :target => "_blank"} Cryptopus
+      %a{href: "https://github.com/puzzle/cryptopus", target: "_blank"} Cryptopus
     .pull-right
       %small
         = t :auto_logout
