--- a/app/views/logins/newuser.html.haml
+++ b/app/views/logins/newuser.html.haml
@@ -1,3 +1,3 @@
 %h1= t '.title'
 %p= t '.description'
-= link_to 'Continue', :controller => 'teams', :action => 'index'
+= link_to 'Continue', controller: 'teams', action: 'index'
