--- a/app/views/accounts/index.html.haml
+++ b/app/views/accounts/index.html.haml
@@ -2,11 +2,11 @@
 = link_to 'New', new_team_group_account_path, class: 'btn btn-primary pull-right'
 %table.table.table-striped
   %tr
-    %th{:style => "width: 150px;"}= t '.account'
+    %th{style: "width: 150px;"}= t '.account'
     %th= t :description
-    %th{:colspan => "3"}= t :actions
+    %th{colspan: "3"}= t :actions
   - @accounts.each do |account|
-    %tr{:class => "#{cycle('odd', 'even')}"}
+    %tr{class: "#{cycle('odd', 'even')}"}
       %td= link_to image_tag( "encrypted_small.svg" ) + " " + account.accountname, [@team, @group, account]
       %td= account.description
       %td.action_icon= link_to image_tag("edit.svg"), [:edit, @team, @group, account]
