--- a/app/views/groups/index.html.haml
+++ b/app/views/groups/index.html.haml
@@ -1,14 +1,14 @@
-%h1= t '.title', :team_name => @team.name
+%h1= t '.title', team_name: @team.name
 = link_to 'New', new_team_group_path, class: 'btn btn-primary pull-right'
 %table.table.table-striped
   %tr
-    %th{:style => "width: 150px;"}= t '.group'
+    %th{style: "width: 150px;"}= t '.group'
     %th= t :description
-    %th{:colspan => "3"}= t :actions
+    %th{colspan: "3"}= t :actions
   - for group in @groups
-    %tr{:class => "#{cycle('odd', 'even')}"}
+    %tr{class: "#{cycle('odd', 'even')}"}
       %td= link_to image_tag( "folder_open.svg" ) + " " + %Q{#{group.name}}, team_group_accounts_path(@team, group)
       %td= group.description
       %td.action_icon= link_to image_tag("edit.svg"), [:edit, @team, group]
       %td.action_icon= link_to_destroy [@team, group], group
-= render :partial => 'teammembers/index'
+= render partial: 'teammembers/index'
