--- a/app/views/recryptrequests/new.html.haml
+++ b/app/views/recryptrequests/new.html.haml
@@ -1,4 +1,4 @@
-= form_tag :action => 'create' do
+= form_tag action: 'create' do
   %p
     = t 'admin.recryptrequests.uncrypterror.ldap_password_changed'
     %br/
@@ -6,14 +6,14 @@
   %br/
   - if @user.last_login_at
     %p
-      = t :last_login, :time_ago => (time_ago_in_words @user.last_login_at)
+      = t :last_login, time_ago: (time_ago_in_words @user.last_login_at)
     %br/
   %p
-    %label{:for => "new_password"}
+    %label{for: "new_password"}
       = t 'admin.recryptrequests.uncrypterror.ldap_new_password'
-      = password_field_tag :new_password, params[:new_password], :autofocus => true
+      = password_field_tag :new_password, params[:new_password], autofocus: true
     %br/
-    %label{:for => "old_password"}
+    %label{for: "old_password"}
       = t 'admin.recryptrequests.uncrypterror.ldap_old_password'
       = password_field_tag :old_password, params[:old_password]
   %br/
@@ -21,9 +21,9 @@
     = t 'admin.recryptrequests.uncrypterror.forgot_password_recrypt'
   %br/
   %p
-    %label{:for => "recrypt_request"}
+    %label{for: "recrypt_request"}
       = t :forgot_password
       = check_box_tag :recrypt_request
   %br/
-  %label{:for => "send"}
+  %label{for: "send"}
     = submit_tag t('admin.recryptrequests.uncrypterror.send')
