--- a/app/views/search/index.html.haml
+++ b/app/views/search/index.html.haml
@@ -2,7 +2,7 @@
   %h1
     Hi#{username}! Want to recover a password?
   = text_field_tag :search_string,  params[:search_string], autocomplete: 'off', autofocus: true, class: 'form-control search-input'
-.result-info{:style => "display: none;"}= t('.no_results_found')
+.result-info{style: "display: none;"}= t('.no_results_found')
 %ul.search-result.result-list
 :javascript
   new Cryptopus.Search($('.search-input'), $('.result-list'));
