--- a/app/views/teammembers/_form.html.haml
+++ b/app/views/teammembers/_form.html.haml
@@ -1,5 +1,5 @@
 / [form:username]
-= form_tag :action => 'create' do
+= form_tag action: 'create' do
   = error_messages_for 'teammembers'
   = label_tag t(:username)
   = select_tag :username , options_for_select(teammember_candidates)
