added haml to licenses task, inserted licenses

--- a/app/views/accounts/show.html.haml
+++ b/app/views/accounts/show.html.haml
@@ -1,3 +1,8 @@
+-#  Copyright (c) 2008-2016, Puzzle ITC GmbH. This file is part of
+-#  Cryptopus and licensed under the Affero General Public License version 3 or later.
+-#  See the COPYING file at the top-level directory or at
+-#  https://github.com/puzzle/cryptopus.
+
 = link_to 'Edit', edit_team_group_account_path(@account.group.team.id, @account.group.id, @account.id), class: 'btn btn-primary pull-right'
 %h1= t '.title', account_name: @account.accountname
 %div
