--- a/app/views/layouts/_locale.html.haml
+++ b/app/views/layouts/_locale.html.haml
@@ -1,3 +1,8 @@
+-#  Copyright (c) 2008-2016, Puzzle ITC GmbH. This file is part of
+-#  Cryptopus and licensed under the Affero General Public License version 3 or later.
+-#  See the COPYING file at the top-level directory or at
+-#  https://github.com/puzzle/cryptopus.
+
 - user_locale = current_user.preferred_locale
 = form_tag(changelocale_login_path) do
   %select{name: "new_locale", onchange: "this.form.submit()"}
