--- a/app/views/accounts/_index_menu.html.haml
+++ b/app/views/accounts/_index_menu.html.haml
@@ -1,3 +1,8 @@
+-#  Copyright (c) 2008-2016, Puzzle ITC GmbH. This file is part of
+-#  Cryptopus and licensed under the Affero General Public License version 3 or later.
+-#  See the COPYING file at the top-level directory or at
+-#  https://github.com/puzzle/cryptopus.
+
 %ul.nav.nav-pills
   %li= link_to image_tag( "folder_open.svg" ) + " " + t('.groups'), team_groups_path(@team)
   %li= link_to image_tag("add.svg") + " " + t('.create'), new_team_group_account_path(@team, @group)
