--- a/app/views/accounts/index.html.haml
+++ b/app/views/accounts/index.html.haml
@@ -1,3 +1,8 @@
+-#  Copyright (c) 2008-2016, Puzzle ITC GmbH. This file is part of
+-#  Cryptopus and licensed under the Affero General Public License version 3 or later.
+-#  See the COPYING file at the top-level directory or at
+-#  https://github.com/puzzle/cryptopus.
+
 %h1= t '.title', group_name: @group.name, team_name: @team.name
 = link_to 'New', new_team_group_account_path, class: 'btn btn-primary pull-right'
 %table.table.table-striped
