--- a/app/views/admin/recryptrequests/request.html.haml
+++ b/app/views/admin/recryptrequests/request.html.haml
@@ -1,1 +1,6 @@
+-#  Copyright (c) 2008-2016, Puzzle ITC GmbH. This file is part of
+-#  Cryptopus and licensed under the Affero General Public License version 3 or later.
+-#  See the COPYING file at the top-level directory or at
+-#  https://github.com/puzzle/cryptopus.
+
 %p#recoveryrequestbox= t '.request_sent'
