--- a/app/views/recryptrequests/new.html.haml
+++ b/app/views/recryptrequests/new.html.haml
@@ -1,3 +1,8 @@
+-#  Copyright (c) 2008-2016, Puzzle ITC GmbH. This file is part of
+-#  Cryptopus and licensed under the Affero General Public License version 3 or later.
+-#  See the COPYING file at the top-level directory or at
+-#  https://github.com/puzzle/cryptopus.
+
 = form_tag action: 'create' do
   %p
     = t 'admin.recryptrequests.uncrypterror.ldap_password_changed'
