--- a/app/views/teams/_index_menu.html.haml
+++ b/app/views/teams/_index_menu.html.haml
@@ -1,2 +1,7 @@
+-#  Copyright (c) 2008-2016, Puzzle ITC GmbH. This file is part of
+-#  Cryptopus and licensed under the Affero General Public License version 3 or later.
+-#  See the COPYING file at the top-level directory or at
+-#  https://github.com/puzzle/cryptopus.
+
 %ul.nav.nav-pills
   %li= link_to image_tag( "add.svg" ) + " " + t('.create'), new_team_path
