--- a/app/views/admin/users/index.html.haml
+++ b/app/views/admin/users/index.html.haml
@@ -33,7 +33,7 @@
       %th{style: "width: 150px;"}= t '.username'
       %th= t '.name'
       %th= t '.action'
-    - @users.unlocked.each do |user|
+    - @users.locked.each do |user|
       %tr{class: "#{cycle( 'odd', 'even' )}"}
         %td= link_to user.username, edit_admin_user_path(user)
         %td= user.label
