--- a/app/views/wizard/index.html.haml
+++ b/app/views/wizard/index.html.haml
@@ -3,6 +3,6 @@
 -#  See the COPYING file at the top-level directory or at
 -#  https://github.com/puzzle/cryptopus.
 
-%h1= t 'Create your root user'
+%h1= t 'Create your user'
 - @submit_button_text = t(:create)
 = render partial: 'form'
