--- a/app/views/admin/maintenance_tasks/prepare.html.haml
+++ b/app/views/admin/maintenance_tasks/prepare.html.haml
@@ -1,3 +1,8 @@
+-#  Copyright (c) 2008-2016, Puzzle ITC GmbH. This file is part of
+-#  Cryptopus and licensed under the Affero General Public License version 3 or later.
+-#  See the COPYING file at the top-level directory or at
+-#  https://github.com/puzzle/cryptopus.
+
 = form_tag :admin_maintenance_tasks_execute do
   - @maintenance_task.task_params.each do |p|
     = create_maintenance_task_field(p)
