flash_messages start

--- a/app/views/layouts/_flashes.html.haml
+++ b/app/views/layouts/_flashes.html.haml
@@ -13,3 +13,5 @@
     = flash[:notice]
     %button.close{"aria-label" => "Close", "data-dismiss" => "alert", type: "button"}
       %span{"aria-hidden" => "true"} &#215;
+- else
+  .message_container{:id => 'message_container'}
