--- a/app/assets/javascripts/templates/alert_messages.hbs.erb
+++ b/app/assets/javascripts/templates/alert_messages.hbs.erb
@@ -1,6 +1,9 @@
-<div class='alert alert-info' id='alert_js'>
-  <button aria-label='Close' class='close' id='close_button' type='button'>
-    <span aria-hidden='true'>&#215;</span>
-  </button>
-  <p class='flash_message' id='alert_message'> {{message}} </p>
-</div>
+{{#each .}}
+  <div class='alert alert-info' id='alert_js' role="alert">
+    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+      <span aria-hidden="true">&times;</span>
+    </button>
+    <p class='flash_message' id='alert_message'> {{this}} </p>
+  </div>
+{{/each}}
+
