refs: #17019, reviced auto_logoff

--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -10,6 +10,6 @@
     .pull-right
       %small
         = t :auto_logout
-        %span#countdown
+        %span#countdown 5m
     .pull-right
       = render 'layouts/locale'
