--- a/app/assets/javascripts/templates/search/result_entry.hbs
+++ b/app/assets/javascripts/templates/search/result_entry.hbs
@@ -17,24 +17,30 @@ https://github.com/puzzle/cryptopus. }}
       </span>
     </div>
     <br>
-    <div class="result-action form-group">
+    <div class="result-action">
       <div class="result-username select-click">
         <input id="username_{{id}}" type="text" value="{{cleartext_username}}" class="form-control" readonly>
-        <button class="btn clip_button_search" data-clipboard-target="username_{{id}}" title="Click to copy">
+        <button class="btn clip_button_search" data-clipboard-target="#username_{{id}}" title="Click to copy">
           <svg class="icon-clippy">
             <use xlink:href="#icon-clippy"></use>
           </svg>
         </button>
+        <p class="copied">
+          Username copied!
+        </p>
       </div>
 
+      <a href="#" class="password-show">Show password</a>
       <div class="result-password select-click">
-        <a href="#" class="password-link">Show password</a>
-        <input id="password_{{id}}"type="text" class="password-hidden hide form-control" value="{{cleartext_password}}" readonly>
-        <button class="btn clip_button_search" data-clipboard-target="password_{{id}}" title="Click to copy">
+        <input id="password_{{id}}"type="text" class="password-hidden form-control" value="{{cleartext_password}}" readonly>
+        <button class="btn clip_button_search" data-clipboard-target="#password_{{id}}" title="Click to copy">
           <svg class="icon-clippy">
             <use xlink:href="#icon-clippy"></use>
           </svg>
         </button>
+        <p class="copied">
+          Password copied!
+        </p>
       </div>
     </div>
   </li>
