--- a/app/views/admin/users/index.html.haml
+++ b/app/views/admin/users/index.html.haml
@@ -41,7 +41,10 @@
           = link_to image_tag("unlock.svg"),  unlock_admin_user_path(user.id), title: t('.unlock')
 
 - if @soloteams != nil
-  = render partial: 'index_teams'
+  %div{:id => "soloteams"}
+    = render partial: 'index_teams'
+
+
 
 :javascript
   window.I18n = #{current_translations.to_json.html_safe}
