--- a/app/views/admin/users/index.html.haml
+++ b/app/views/admin/users/index.html.haml
@@ -42,7 +42,7 @@
 
 - if @soloteams != nil
   %div{:id => "soloteams"}
-    = render partial: 'index_teams'
+    = render partial: 'index_soloteams'
 
 
 
