revised: Delete user with last teammembers teams - #17022

--- a/app/assets/stylesheets/user.scss
+++ b/app/assets/stylesheets/user.scss
@@ -21,17 +21,17 @@
   border-radius:10px;
 }
 
-#teamscreen-content{
+#teamscreen_content{
   max-height: 94%;
   overflow: auto;
   padding: 15px;
 }
 
-#teamscreen-buttons{
+#teamscreen_buttons{
   margin-top: 10px;
   border-top: 1px solid #cccccc;;
 }
 
-#soloteams-button{
+#soloteams_cancel_button{
   margin: 15px 0 0 5px;;
 }
