Translated buttons refs #17908

--- a/app/views/accounts/show.html.haml
+++ b/app/views/accounts/show.html.haml
@@ -14,16 +14,12 @@
     %button.clip_button_account{"data-clipboard-target" => "#cleartext_username", title: "Click to copy" }
       %svg.icon-clippy
         %use{"xlink:href" => "#icon-clippy"}
-    %p.copied.username
-      = 'Username copied!'
-  %a.password-link{href: "#"} Show password
+  %a.password-link{href: "#"} =t('Show password')
   .result-password.select-click
     %input#cleartext_password.password-hidden.form-control{readonly: "readonly", type: "text", value: "#{@account.cleartext_password}"}/
     %button.clip_button_account{"data-clipboard-target" => "#cleartext_password", title: "Click to copy"}
       %svg.icon-clippy
         %use{"xlink:href" => "#icon-clippy"}
-    %p.copied.password
-      = 'Password copied!'
   #hidden_password{style: "display:none"}
     = @account.cleartext_password
   %br/
