--- a/app/views/admin/settings/index.html.haml
+++ b/app/views/admin/settings/index.html.haml
@@ -9,4 +9,4 @@
   - @settings.each do |setting|
     = input_field_setting(setting)
   %br/
-  = submit_tag "submit", class: 'btn btn-primary'
+  = submit_tag t('admin.settings.index.save'), class: 'btn btn-primary'
