--- a/app/views/groups/index.html.haml
+++ b/app/views/groups/index.html.haml
@@ -5,7 +5,7 @@
 
 %h1= t '.title', team_name: @team.name
 = hidden_field_tag :team_id, @team.id
-= link_to 'New', new_team_group_path, class: 'btn btn-primary pull-right'
+= link_to t('groups.new.title'), new_team_group_path, class: 'btn btn-primary pull-right'
 %table.table.table-striped
   %tr
     %th{style: "width: 150px;"}= t '.group'
