--- a/app/views/teams/index.html.haml
+++ b/app/views/teams/index.html.haml
@@ -4,7 +4,7 @@
 -#  https://github.com/puzzle/cryptopus.
 
 %h1= t '.title'
-= link_to 'New', new_team_path, class: 'btn btn-primary pull-right'
+= link_to t('teams.new.title'), new_team_path, class: 'btn btn-primary pull-right'
 %table.table.table-striped
   %tr
     %th{style: "width: 150px;"}= t '.team'
