--- a/app/views/admin/users/index.html.haml
+++ b/app/views/admin/users/index.html.haml
@@ -4,7 +4,7 @@
 -#  https://github.com/puzzle/cryptopus.
 
 %h1= t '.title'
-= link_to 'New', new_admin_user_path, class: 'btn btn-primary pull-right'
+= link_to t('admin.users.new.title'), new_admin_user_path, class: 'btn btn-primary pull-right'
 %table.table.table-striped#team_table
   %tr
     %th= t '.username'
