--- a/app/assets/stylesheets/teammember.scss
+++ b/app/assets/stylesheets/teammember.scss
@@ -12,9 +12,10 @@
 .columns li {
     width: 32%;
     display:inline-block;
-    padding: 2px;
-    border: 1px solid white;
-    background-color: #F2F2F2;
+    padding: 3px;
+    border-radius: 3px;
+    border-top: 5px solid white;
+    background-color: #E2E2E2;
 }
 
 .columns li a img {
@@ -27,8 +28,13 @@
 
 .members{
   display: none;
+  margin-top: 20px;
 }
 
 .add_member{
+  float: right;
+}
+
+li #penguin{
   float: right;
 }
