--- a/app/views/teammembers/_index.haml
+++ b/app/views/teammembers/_index.haml
@@ -6,8 +6,7 @@
 :javascript
   window.I18n = #{current_translations.to_json.html_safe}
 .add_member
-  %input#search_member{placeholder: "add member", type: "text"}/
-  %a{href: "#"}= image_tag("add.svg");
+  %input.form-control#search_member{placeholder: "add member", type: "text"}/
 %h1.members= t '.members'
 .columns.members
 %a.show_members{href: "#"}= t('teammembers.show')
