sorted teammembers refs #17938, fixed table layout

--- a/app/views/teams/index.html.haml
+++ b/app/views/teams/index.html.haml
@@ -17,3 +17,5 @@
       %td.action_icon= link_to image_tag( "edit.svg" ), edit_team_path( team )
       - if can_delete_team?(team)
         %td.action_icon= link_to_destroy [team], team
+      - else
+        %td
