--- a/app/assets/stylesheets/teammember.scss
+++ b/app/assets/stylesheets/teammember.scss
@@ -13,9 +13,11 @@
     width: 32%;
     display:inline-block;
     padding: 3px;
-    border-radius: 3px;
-    border-top: 5px solid white;
-    background-color: #E2E2E2;
+    padding-left: 8px;
+    margin-bottom: 4px;
+    border-top: 1px solid #dddddd;
+    border-bottom: 1px solid #dddddd;
+    background-color: #f5f5f5;
 }
 
 .columns li a img {
