Refactored RecryptrequestsController refs #18285

--- a/app/assets/stylesheets/custom.scss.less
+++ b/app/assets/stylesheets/custom.scss.less
@@ -147,3 +147,24 @@ body {
   height: 20px;
     background-color: black;
 }
+
+/* recryptrequest */
+
+#recrypt_description{
+  display: none;
+  width: 100%;
+}
+
+#forgot_password_checkbox{
+  float: right;
+  margin-top: -40px;
+}
+
+#old_password{
+  width: 65%;
+}
+
+#ldap_info{
+  background-color: rgba(217, 237, 247, 0.2);
+  width: 100%;
+}
