fixed some css & jquery bugs, translated show password and search title refs #17908

--- a/app/assets/stylesheets/custom.scss.less
+++ b/app/assets/stylesheets/custom.scss.less
@@ -79,10 +79,21 @@ body {
 
 /*Account*/
 
-.clip_button_account{
+.clip_button{
   position: absolute;
   left: 210px;
   top: -2px;
+  border: 1px solid #C9C9C9;
+  position: absolute;
+  top: 0;
+  right: 0;
+  height: 35px;
+  width: 50px;
+}
+
+.clip_button svg{
+  padding-right: 2px;
+  padding-bottom: 1px;
 }
 
 .copied{
@@ -146,4 +157,25 @@ body {
   width: 20px;
   height: 20px;
     background-color: black;
+}
+
+/* recryptrequest */
+
+#recrypt_description{
+  display: none;
+  width: 100%;
+}
+
+#forgot_password_checkbox{
+  float: right;
+  margin-top: -40px;
+}
+
+#old_password{
+  width: 65%;
+}
+
+#ldap_info{
+  background-color: rgba(217, 237, 247, 0.2);
+  width: 100%;
 }
