--- a/app/assets/javascripts/templates/search/result_entry.hbs
+++ b/app/assets/javascripts/templates/search/result_entry.hbs
@@ -20,7 +20,7 @@ https://github.com/puzzle/cryptopus. }}
     <div class="result-action">
       <div class="result-username select-click">
         <input id="username_{{id}}" type="text" value="{{cleartext_username}}" class="form-control" readonly>
-        <button class="btn clip_button_search" data-clipboard-target="#username_{{id}}" title="Click to copy">
+        <button class="btn clip_button" data-clipboard-target="#username_{{id}}" title="Click to copy">
           <svg class="icon-clippy">
             <use xlink:href="#icon-clippy"></use>
           </svg>
@@ -30,7 +30,7 @@ https://github.com/puzzle/cryptopus. }}
       <a href="#" class="password-show">Show password</a>
       <div class="result-password select-click">
         <input id="password_{{id}}"type="text" class="password-hidden form-control" value="{{cleartext_password}}" readonly>
-        <button class="btn clip_button_search" data-clipboard-target="#password_{{id}}" title="Click to copy">
+        <button class="btn clip_button" data-clipboard-target="#password_{{id}}" title="Click to copy">
           <svg class="icon-clippy">
             <use xlink:href="#icon-clippy"></use>
           </svg>
