--- a/app/views/accounts/show.html.haml
+++ b/app/views/accounts/show.html.haml
@@ -11,13 +11,13 @@
   %br/
   .result-username.select-click
     %input#cleartext_username.form-control{readonly: "readonly", type: "text", value: "#{@account.cleartext_username}"}/
-    %button.clip_button_account{"data-clipboard-target" => "#cleartext_username", title: "Click to copy" }
+    %button.btn.clip_button{"data-clipboard-target" => "#cleartext_username", title: "Click to copy" }
       %svg.icon-clippy
         %use{"xlink:href" => "#icon-clippy"}
-  %a.password-link{href: "#"} =t('Show password')
+  %a.password-link{href: "#"}= t '.show_password'
   .result-password.select-click
     %input#cleartext_password.password-hidden.form-control{readonly: "readonly", type: "text", value: "#{@account.cleartext_password}"}/
-    %button.clip_button_account{"data-clipboard-target" => "#cleartext_password", title: "Click to copy"}
+    %button.btn.clip_button{"data-clipboard-target" => "#cleartext_password", title: "Click to copy"}
       %svg.icon-clippy
         %use{"xlink:href" => "#icon-clippy"}
   #hidden_password{style: "display:none"}
