--- a/app/views/search/index.html.haml
+++ b/app/views/search/index.html.haml
@@ -4,8 +4,7 @@
 -#  https://github.com/puzzle/cryptopus.
 
 .form-group.search
-  %h1
-    Hi#{username}! Want to recover a password?
+  %h1= t('.hi_user', username: username)
   = text_field_tag :search_string,  params[:search_string], autocomplete: 'off', autofocus: true, class: 'form-control search-input'
 .result-info{style: "display: none;"}= t('.no_results_found')
 %ul.search-result.result-list
