--- a/app/assets/stylesheets/custom.scss.less
+++ b/app/assets/stylesheets/custom.scss.less
@@ -79,10 +79,21 @@ body {
 
 /*Account*/
 
-.clip_button_account{
+.clip_button{
   position: absolute;
   left: 210px;
   top: -2px;
+  border: 1px solid #C9C9C9;
+  position: absolute;
+  top: 0;
+  right: 0;
+  height: 35px;
+  width: 50px;
+}
+
+.clip_button svg{
+  padding-right: 2px;
+  padding-bottom: 1px;
 }
 
 .copied{
