refactored views of accounts/groups/teams/items to match new team varable

--- a/app/views/accounts/_form.html.haml
+++ b/app/views/accounts/_form.html.haml
@@ -3,7 +3,7 @@
 -#  See the COPYING file at the top-level directory or at
 -#  https://github.com/puzzle/cryptopus.
 
-= form_for([@team, @group, @account], role: 'form') do |f|
+= form_for([team, @group, @account], role: 'form') do |f|
   = f.error_messages
   .form-group
     = f.label :account
