--- a/app/views/groups/_show_menu.html.haml
+++ b/app/views/groups/_show_menu.html.haml
@@ -4,4 +4,4 @@
 -#  https://github.com/puzzle/cryptopus.
 
 %ul.nav.nav-pills
-  %li= link_to 'Edit', [:edit, @team, @group]
+  %li= link_to 'Edit', [:edit, team, @group]
