--- a/app/views/accounts/index.html.haml
+++ b/app/views/accounts/index.html.haml
@@ -3,7 +3,7 @@
 -#  See the COPYING file at the top-level directory or at
 -#  https://github.com/puzzle/cryptopus.
 
-%h1= t '.title', group_name: @group.name, team_name: @team.name
+%h1= t '.title', group_name: @group.name, team_name: team.name
 = link_to t('accounts.new.title'), new_team_group_account_path, class: 'btn btn-primary pull-right'
 %table.table.table-striped
   %tr
@@ -12,7 +12,7 @@
     %th{colspan: "3"}= t :actions
   - @accounts.each do |account|
     %tr{class: "#{cycle('odd', 'even')}"}
-      %td= link_to image_tag( "encrypted_small.svg" ) + " " + account.accountname, [@team, @group, account]
+      %td= link_to image_tag( "encrypted_small.svg" ) + " " + account.accountname, [team, @group, account]
       %td= account.description
-      %td.action_icon= link_to image_tag("edit.svg"), [:edit, @team, @group, account]
-      %td.action_icon= link_to_destroy [@team, @group, account], account
+      %td.action_icon= link_to image_tag("edit.svg"), [:edit, team, @group, account]
+      %td.action_icon= link_to_destroy [team, @group, account], account
