--- a/app/views/accounts/show.html.haml
+++ b/app/views/accounts/show.html.haml
@@ -37,6 +37,6 @@
     - for item in @items
       %tr{class: "#{cycle( 'odd', 'even' )}"}
         %td
-          = link_to image_tag("file.svg") + item.filename, [@team, @group, @account, item]
+          = link_to image_tag("file.svg") + item.filename, [team, @group, @account, item]
         %td{valign: "top"}= item.description
-        %td.action_icon= link_to_destroy [@team, @group, @account, item], item
+        %td.action_icon= link_to_destroy [team, @group, @account, item], item
