--- a/app/views/groups/_index_menu.html.haml
+++ b/app/views/groups/_index_menu.html.haml
@@ -4,4 +4,4 @@
 -#  https://github.com/puzzle/cryptopus.
 
 %ul.nav.nav-pills
-  %li= link_to image_tag("add.svg") + " " + t('.create'), new_team_group_url(@team)
+  %li= link_to image_tag("add.svg") + " " + t('.create'), new_team_group_url(team)
