--- a/app/views/groups/index.html.haml
+++ b/app/views/groups/index.html.haml
@@ -3,8 +3,8 @@
 -#  See the COPYING file at the top-level directory or at
 -#  https://github.com/puzzle/cryptopus.
 
-%h1= t '.title', team_name: @team.name
-= hidden_field_tag :team_id, @team.id
+%h1= t '.title', team_name: team.name
+= hidden_field_tag :team_id, team.id
 = link_to t('groups.new.title'), new_team_group_path, class: 'btn btn-primary pull-right'
 %table.table.table-striped
   %tr
@@ -13,8 +13,8 @@
     %th{colspan: "3"}= t :actions
   - for group in @groups
     %tr{class: "#{cycle('odd', 'even')}"}
-      %td= link_to image_tag( "folder_open.svg" ) + " " + %Q{#{group.name}}, team_group_accounts_path(@team, group)
+      %td= link_to image_tag( "folder_open.svg" ) + " " + %Q{#{group.name}}, team_group_accounts_path(team, group)
       %td= group.description
-      %td.action_icon= link_to image_tag("edit.svg"), [:edit, @team, group]
-      %td.action_icon= link_to_destroy [@team, group], group
+      %td.action_icon= link_to image_tag("edit.svg"), [:edit, team, group]
+      %td.action_icon= link_to_destroy [team, group], group
 = render partial: 'teammembers/index'
