--- a/app/assets/javascripts/templates/team_member_entry.hbs.erb
+++ b/app/assets/javascripts/templates/team_member_entry.hbs.erb
@@ -3,12 +3,12 @@
     <li data-value='{"user_id": {{user_id}} }'>
       {{label}}
       {{#if admin}}
-        <img src="/assets/penguin.svg" id="penguin" alt="Remove"/>
+        <%= image_tag("penguin.svg", class: "admin", alt:"Admin" ) %>
       {{/if}}
 
       {{#if deletable}}
         <a href="#">
-          <img src="/assets/remove.svg" id="remove_member" alt="Remove"/>
+          <%= image_tag("remove.svg", class: "remove_member", alt:"Remove" ) %>
         </a>
       {{/if}}
     </li>
