--- a/app/views/admin/users/edit.html.haml
+++ b/app/views/admin/users/edit.html.haml
@@ -14,3 +14,6 @@
       = label_tag t('.reset_password')
       = password_field_tag :new_password, nil, class: 'form-control'
     = submit_tag t('.reset_password'), class: 'btn btn-primary'
+    
+.alert.alert-warning#edit_warning
+  =simple_format t 'admin.users.edit.warning'
