--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -11,6 +11,7 @@
     %meta{content: "IE=edge", "http-equiv" => "X-UA-Compatible"}/
     %meta{content: "width=device-width, initial-scale=1", name: "viewport"}/
     %link{href: "/favicon.png", rel: "shortcut icon", type: "image/png"}/
+    %link{href: "https://fontlibrary.org/face/nimbus-sans-l", rel: "stylesheet", media: "screen", type: "text/css"}/
     = csrf_meta_tags
     %title Cryptopus
     = stylesheet_link_tag :application, media: "all"
