--- a/app/assets/stylesheets/user.scss
+++ b/app/assets/stylesheets/user.scss
@@ -1,4 +1,4 @@
-#soloteams{
+#last_teammember_teams{
   position:fixed;
   top:0;
   left:0;
@@ -32,10 +32,12 @@
   border-top: 1px solid #cccccc;;
 }
 
-#soloteams_cancel_button{
+#last_teammember_teams_cancel_button,
+#delete_user_button{
   margin: 15px 0 0 5px;;
 }
 
-#team_table .unprotected_delete_link{
+.last_teammember_teams_table,
+.delete_user_warning_message{
   display: none;
 }
