adding drpodown menues refs # 18624

--- a/app/views/accounts/_form.html.haml
+++ b/app/views/accounts/_form.html.haml
@@ -19,6 +19,13 @@
     %span#unencrypted
       (#{I18n.t('unencrypted_field_caption')})
     = f.text_area :description, class: 'form-control'
+
+  = f.label :move
+  %br/
+  = f.label :team
+  .move_team
+  = f.label :group
+  .move_group    
   - if @groups && @groups.count > 1
     = f.label I18n.t('accounts_move')
     = f.collection_select(:group_id, @groups, :id, :name)
