improv move account

--- a/app/views/accounts/_form.html.haml
+++ b/app/views/accounts/_form.html.haml
@@ -20,7 +20,7 @@
       (#{I18n.t('unencrypted_field_caption')})
     = f.text_area :description, class: 'form-control'
   .form-group
-    = f.label :move
+    %h1= 'Move Account'
     %br/
     = f.label :team
     .move_team
