#19547 some style fixes

--- a/app/assets/stylesheets/custom.scss.less
+++ b/app/assets/stylesheets/custom.scss.less
@@ -15,8 +15,8 @@ img{
 html {
   position: relative;
   min-height: 100%;
-  margin-left: calc(100vw - 100%);
-  margin-right: 0;
+  width:100vw !important;
+  overflow-x:hidden !important;
 }
 
 body {
