--- a/app/views/accounts/show.html.haml
+++ b/app/views/accounts/show.html.haml
@@ -8,7 +8,7 @@
 %div
   %p
     %strong= t :description
-    = @account.description
+    = simple_format @account.description
   %br/
   .result-username.select-click
     %input#cleartext_username.form-control{readonly: "readonly", type: "text", value: "#{@account.cleartext_username}"}/
@@ -39,5 +39,5 @@
       %tr{class: "#{cycle( 'odd', 'even' )}"}
         %td
           = link_to image_tag("file.svg") + item.filename, [team, @group, @account, item]
-        %td{valign: "top"}= item.description
+        %td{valign: "top"}= simple_format item.description
         %td.action_icon= link_to_destroy [team, @group, @account, item], item
