--- a/app/views/groups/index.html.haml
+++ b/app/views/groups/index.html.haml
@@ -14,7 +14,7 @@
   - for group in @groups
     %tr{class: "#{cycle('odd', 'even')}"}
       %td= link_to image_tag( "folder_open.svg" ) + " " + %Q{#{group.name}}, team_group_accounts_path(team, group)
-      %td= group.description
+      %td= simple_format group.description
       %td.action_icon= link_to image_tag("edit.svg"), [:edit, team, group]
       %td.action_icon= link_to_destroy [team, group], group
 = render partial: 'teammembers/index'
