--- a/app/views/admin/maintenance_tasks/prepare.html.haml
+++ b/app/views/admin/maintenance_tasks/prepare.html.haml
@@ -3,6 +3,7 @@
 -#  See the COPYING file at the top-level directory or at
 -#  https://github.com/puzzle/cryptopus.
 
+%h1= @maintenance_task.label
 = form_tag :admin_maintenance_tasks_execute do
   - @maintenance_task.task_params.each do |p|
     = create_maintenance_task_field(p)
