--- a/app/views/teams/index.html.haml
+++ b/app/views/teams/index.html.haml
@@ -12,7 +12,10 @@
     %th{colspan: "3"}= t :actions
   - @teams.each do |team|
     %tr{class: "#{cycle( 'odd', 'even' )}"}
-      %td= link_to image_tag( "members.svg" ) + " #{team.name}", team_groups_path( team )
+      - if team.private?
+        %td= link_to image_tag( "encrypted_small.svg" ) + " #{team.name}", team_groups_path( team )
+      - else
+        %td= link_to image_tag( "members.svg" ) + " #{team.name}", team_groups_path( team )
       %td= simple_format team.description
       %td.action_icon= link_to image_tag( "edit.svg" ), edit_team_path( team )
       - if can_delete_team?(team)
